<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register_fullname"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtRegisterName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register_email"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtRegisterEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_password"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtRegisterPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_c_password"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtRegisterCPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register_subscriber_id"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtRegisterSubsID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register_ssn"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtRegisterSSN"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/register_btn_signup" />

</LinearLayout>